# money-rs

./: .env.example  .gitignore  .stignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  test.env
inner_macros/: Cargo.toml
inner_macros/src/: lib.rs
migrations/2024-01-25-062802_create_tables/: up.sql
migrations/20240125062802_create_tables/: down.sql  up.sql
src/: authentication.rs  consts.rs  env_vars.rs  handlers.rs  http.rs  main.rs  model.rs  schema.rs
