workspace = { members = ["inner_macros"] }

[package]
name = "money-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
r2d2 = "0.8.10"
reqwest = "0.12.9"
password-hash = "0.6.0-rc.0"
pbkdf2 = { version = "0.13.0-pre.1", features = ["simple"] }
rust-crypto = "0.2.36"

futures = { version = "0.3.31", features = ["executor"] }
tokio = { version = "1.41.1" }
actix-http = "3.9.0"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
actix-utils = "3.0.1"
rand = "0.9.0-alpha.2"
base64 = "0.22.1"
inner-macros = { path = "./inner_macros" }
env_logger = "0.11.5"
# for env_logger
log = "0.4.22"
serde_qs = "0.13.0"
thiserror = "2.0.3"


[features]
default = []
create_user = []
